# githbuActionTest

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pr-check.yml  release.yml
.trae/specs/: checklist.md  spec.md  tasks.md
app/: string_utils.py
tests/: test_string_utils.py
